fixed overlapping content on menu
git-svn-id: https://svn.codehaus.org/grails/trunk@6946 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d

--- a/grails-samples/grails.org/web-app/css/subpage.css
+++ b/grails-samples/grails.org/web-app/css/subpage.css
@@ -66,7 +66,7 @@ body.subpage {
 }
 
 .subpage #content-container {
-	width:680px;
+	width:620px;
 }
 .subpage #content {
 	background-color: #fff;
